--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     buildToolsVersion "29.0.2"
-    useLibrary 'org.apache.http.legacy'
+   // useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "net.goutalk.fowit"
         minSdkVersion 16
@@ -85,6 +85,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0+'
     implementation files('libs\\openapi.jar')
+    implementation files('libs\\cps_1.0.0.jar')
+    implementation files('libs\\JDSDK_h.jar')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -304,12 +306,15 @@ dependencies {
     implementation 'com.gyf.immersionbar:immersionbar-components:3.0.0'
     implementation 'com.lcodecorex:tkrefreshlayout:1.0.7'
     implementation 'liji.library.dev:citypickerview:5.2.2'
+    implementation 'org.greenrobot:greendao:3.2.2'
+    implementation(name:'beishengsdklib-release', ext:'aar')
 
 }
 repositories {
     flatDir {
-        dirs 'libs'
+        dirs 'libs', '../../../../library_module/libs'
     }
+
     mavenCentral()
     maven {
         url "http://repo.baichuan-android.taobao.com/content/groups/BaichuanRepositories/"
