--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,10 @@ buildscript {
             url "http://repo.baichuan-android.taobao.com/content/groups/BaichuanRepositories/"
         }
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
-
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
